testsuite/tests/th/TH_cvt_InvalidTypeInstanceHeader.hs
{-# LANGUAGE TemplateHaskell #-}

module TH_cvt_InvalidTypeInstanceHeader where

import Language.Haskell.TH

$(return [DataInstD [] Nothing WildCardT Nothing [] []])
